_build/html/reports/Talbot.log
Traceback (most recent call last):
  File "/home/charles/.local/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/charles/.local/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/charles/.local/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/charles/.local/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/home/charles/.local/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/charles/.local/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/charles/.local/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
## Talbot carpet

This code makes a plot of a **Talbot carpet**, named after 
<a href = "https://en.wikipedia.org/wiki/Henry_Fox_Talbot">Henry Fox Talbot</a> (Feb 11, 1800 - Sept 17, 1877),
who observed the effect in 1836. 
The physics is identical to $N$-slit, where $N$ is relatively large. The Talbot carpet is formed
in the near-field of the grating. To model the near field we use the Fresnel integrals, see
<a href = "https://global.oup.com/academic/product/optics-f2f-9780198786795?cc=gb&lang=en&">Optics f2f</a> Sec. 5.10.

The code allows us to vary both the width of each slit $a$ and the spacing between them $d$.

------------------

[0;36m  Cell [0;32mIn [1], line 3[0;36m[0m
[0;31m    This code makes a plot of a **Talbot carpet**, named after[0m
[0m         ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (468314276.py, line 3)

